added streamlit app link in the jupyter notebooks(01, 03) 1st markdown

--- a/01.-Developing IMage Compression step-by-step.ipynb
+++ b/01.-Developing IMage Compression step-by-step.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b71a64d8-6809-43e6-934f-9225b6de997e",
+   "metadata": {},
+   "source": [
+    "<h1><center>👉 <a href=\"https://image-compression-kmeans.streamlit.app/\", target = \"_blank\">STREAMLIT APP LINK</a></center></h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c43ec19-c0f2-40db-9343-5e9d4c95c148",
    "metadata": {},
    "source": [
@@ -550,7 +558,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter k (less the k, higher the compression) :  4\n"
