--- a/03.-IMage Compression structured with functions.ipynb
+++ b/03.-IMage Compression structured with functions.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "252b10b9",
+   "metadata": {},
+   "source": [
+    "<h1><center>👉 <a href=\"https://image-compression-kmeans.streamlit.app/\", target = \"_blank\">STREAMLIT APP LINK</a></center></h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f4b923b0-938d-4ad0-8efa-4af031f8ec8d",
