updated the emoji of streamlit link first markdown

--- a/01.-Developing IMage Compression step-by-step.ipynb
+++ b/01.-Developing IMage Compression step-by-step.ipynb
@@ -5,7 +5,7 @@
    "id": "b71a64d8-6809-43e6-934f-9225b6de997e",
    "metadata": {},
    "source": [
-    "<h1><center>👉 <a href=\"https://image-compression-kmeans.streamlit.app/\", target = \"_blank\">STREAMLIT APP LINK</a></center></h1>"
+    "<h1><center>🔗 <a href=\"https://image-compression-kmeans.streamlit.app/\", target = \"_blank\">STREAMLIT APP LINK</a></center></h1>"
    ]
   },
   {
