--- a/03.-IMage Compression structured with functions.ipynb
+++ b/03.-IMage Compression structured with functions.ipynb
@@ -5,7 +5,7 @@
    "id": "252b10b9",
    "metadata": {},
    "source": [
-    "<h1><center>👉 <a href=\"https://image-compression-kmeans.streamlit.app/\", target = \"_blank\">STREAMLIT APP LINK</a></center></h1>"
+    "<h1><center>🔗 <a href=\"https://image-compression-kmeans.streamlit.app/\", target = \"_blank\">STREAMLIT APP LINK</a></center></h1>"
    ]
   },
   {
